# -----------------------------------------
# pion-platform automake configuration file 
# -----------------------------------------

SUBDIRS = include src codecs databases reactors server services @PION_TESTS_MAKEDIRS@

EXTRA_DIST = build/*.vsprops build/README* build/appIcon.icns \
	build/*.sh build/pion-icon.png config doc ui
