# -----------------------------------------
# pion-platform automake configuration file 
# -----------------------------------------

SUBDIRS = include src codecs protocols databases reactors server services @PION_TESTS_MAKEDIRS@

EXTRA_DIST = *.vcproj build/*.vsprops build/README* build/appIcon.icns \
	build/*.sh build/*.pl build/pion-icon.png build/config config doc ui
