# -----------------------------------------
# pion-platform automake configuration file 
# -----------------------------------------

SUBDIRS = include src codecs protocols databases reactors server services @PION_TESTS_MAKEDIRS@

EXTRA_DIST = *.vcproj build/*.vsprops build/README* build/appIcon.icns \
	build/*.sh build/*.pl build/*.bat build/pion-icon.png build/config \
	build/rpm doc ui build/3rdparty build/win32/config build/pget.py build/pmon.py
