# -----------------------------------------
# pion-platform automake configuration file 
# -----------------------------------------

#AM_CFLAGS = -O2

lib_LTLIBRARIES = libpion-sqlite.la

libpion_sqlite_la_SOURCES = pion-sqlite.c pion-sqlite.h
libpion_sqlite_la_LDFLAGS = -no-undefined -release $(PION_LIBRARY_VERSION)

EXTRA_DIST = *.vcproj
