# -----------------------------------
# libpion automake configuration file 
# -----------------------------------

libpion_includedir = $(includedir)/libpion
libpion_include_HEADERS = PionConfig.hpp PionLogger.hpp PionPlugin.hpp \
	Pion.hpp PionEngine.hpp TCPConnection.hpp TCPServer.hpp \
	HTTPTypes.hpp HTTPModule.hpp HTTPRequest.hpp HTTPResponse.hpp \
	HTTPRequestParser.hpp HTTPServer.hpp
